# RustyPlayer

./: .gitignore  Cargo.toml  README.md  cachegrind.out  callgrind.out  music_array.conf  rustyplayer.conf
src/: main.rs  music_play.rs  old.unused  temp.rs  test.rs
src/spotify/: mod.rs
